force-app/main/default/objects/Contact/fields/Date_Of_Joining__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Joining__c</fullName>
    <description>Date of Joining of users</description>
    <label>Date Of Joining</label>
    <type>Date</type>
</CustomField>