force-app/main/default/objects/Contact/fields/EmployeeNumber__c.field-meta.xml
<CustomField>
    <fullName>EmployeeNumber__c</fullName>
    <description>Employee Number will count automatically</description>
    <label>EmployeeNumber</label>
    <type>AutoNumber</type>
</CustomField>