force-app/main/default/objects/Contact/fields/Password1__c.field-meta.xml
<CustomField>
    <fullName>Password1__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Password1</label>
    <length>69</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>