force-app/main/default/objects/Contact/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>User Password that will be required</description>
    <inlineHelpText>This is in Encrypted form for security</inlineHelpText>
    <label>Password</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>