force-app/main/default/objects/Contact/fields/ReportingTo__c.field-meta.xml
<CustomField>
    <fullName>ReportingTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ReportingTo</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>