force-app/main/default/objects/Contact/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>User Skills may more than one</description>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>salesforce developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>